// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Basic Rendering basic renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-md"
    >
      <div
        class="om-react-ui-checkbox-label-wrap"
      >
        <div
          class="om-react-ui-checkbox-inner-checkbox p-checkbox p-component"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
        I am over 18 years old and I have read, understand and agree to the
        <a
          href="https://github.com/1Money-Co"
        >
          1Money Terms of Use
        </a>
        , 
        <a
          href="https://github.com/1Money-Co"
        >
          Privacy Policy
        </a>
        .
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox Basic Rendering checked renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-md"
    >
      <label>
        <div
          class="om-react-ui-checkbox-inner-checkbox p-checkbox p-component p-highlight"
          data-p-highlight="true"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            checked=""
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-highlight="true"
            data-pc-section="box"
          >
            <i
              class="pi pi-check"
            />
          </div>
        </div>
        Checked
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox Basic Rendering no label renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-md"
    >
      <div
        class="om-react-ui-checkbox-inner-checkbox p-checkbox p-component"
        data-p-highlight="false"
        data-pc-name="checkbox"
        data-pc-section="root"
      >
        <input
          aria-invalid="false"
          class="p-checkbox-input"
          data-pc-section="input"
          type="checkbox"
        />
        <div
          class="p-checkbox-box"
          data-p-highlight="false"
          data-pc-section="box"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox Disabled State disabled checked renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-md"
    >
      <label>
        <div
          class="om-react-ui-checkbox-inner-checkbox p-checkbox p-component p-highlight p-disabled"
          data-p-disabled="true"
          data-p-highlight="true"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            checked=""
            class="p-checkbox-input"
            data-pc-section="input"
            disabled=""
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="true"
            data-p-highlight="true"
            data-pc-section="box"
          >
            <i
              class="pi pi-check"
            />
          </div>
        </div>
        Disabled & Checked
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox Disabled State disabled renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-md"
    >
      <label>
        <div
          class="om-react-ui-checkbox-inner-checkbox p-checkbox p-component p-disabled"
          data-p-disabled="true"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            disabled=""
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="true"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
        Disabled
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox Invalid State invalid renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-md"
    >
      <label>
        <div
          aria-checked="mixed"
          class="om-react-ui-checkbox-inner-checkbox p-checkbox p-component p-invalid"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-checked="mixed"
            aria-invalid="true"
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
        Invalid
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox Size Variants size large renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-lg"
    >
      <label>
        <div
          class="om-react-ui-checkbox-inner-checkbox p-checkbox p-component"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
        Large size
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox Size Variants size small renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-sm"
    >
      <label>
        <div
          class="om-react-ui-checkbox-inner-checkbox p-checkbox p-component"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
        Small size
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox TriState Mode tristate renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-md"
    >
      <label>
        <div
          aria-checked="mixed"
          class="om-react-ui-checkbox-inner-checkbox p-checkbox p-component"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-checked="mixed"
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
        Change State
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox TriState Mode tristate with false value renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-md"
    >
      <label>
        <div
          aria-checked="false"
          class="om-react-ui-checkbox-inner-checkbox om-react-ui-checkbox-inner-checkbox-false p-checkbox p-component"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
        Tristate False
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox TriState Mode tristate with true value renders correctly 1`] = `
<DocumentFragment>
  <div
    class="om-react-ui-checkbox-wrapper"
  >
    <div
      class="om-react-ui-checkbox-inner ckb-md"
    >
      <label>
        <div
          aria-checked="true"
          class="om-react-ui-checkbox-inner-checkbox p-checkbox p-component p-highlight"
          data-p-highlight="true"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-checked="true"
            aria-invalid="false"
            checked=""
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-highlight="true"
            data-pc-section="box"
          >
            <i
              class="pi pi-check"
            />
          </div>
        </div>
        Tristate True
      </label>
    </div>
  </div>
</DocumentFragment>
`;
